# ontology-req-pipeline

./: .env.example  .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt  run_pipeline_example.py
datasets/: README.md  all_rules_extracted.csv  all_rules_extracted.jsonl  fsae_dev_number_unit_sample.jsonl  fsae_test_number_unit_sample.jsonl  public_demo.jsonl  techreq_no_fsae.jsonl
datasets/extracted_reqs/: fsae.jsonl  fsae_number_unit_sampling_manifest.json  robominers.jsonl  robotics.jsonl
examples/: example_input.json  example_pipeline_run.py
ontologies/: catalog-v001.xml  iof-qudt-bridge.ttl  qudt-iof-terms.txt  qudt-light.ttl
ontologies/IOF-Guideline for Using QUDT/: document.md
ontologies/iof_paper/: document.md
scripts/: check_cm_has_centim_unit.py  compare_ground_truth_claims.py  create_fsae_number_unit_samples.py  find_cm_in_source_text.py  run_batch_extraction.py
src/ontology_req_pipeline/: __init__.py  cli.py  config.py  data_models.py  plot_rdf_graph.py
src/ontology_req_pipeline/evaluation/: __init__.py  annotation_helper.py  conformance.md  iaa.py  metrics.md  metrics.py  owl_to_ttl.py  qa_history.jsonl
src/ontology_req_pipeline/extraction/: __init__.py  extractor_base.py  llm_extractor.py  rule_based_extractor.py  utils.py
src/ontology_req_pipeline/normalization/: __init__.py  input_example.json  output.json  qudt_normalization.py  qudt_quantity_kinds_units_symbols.csv  utils.py
tests/: conftest.py  test_data_models.py  test_mock_pipeline.py  test_normalization_utils.py
(+2486 files in other folders)
