[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontology_req_pipeline"
version = "0.1.0"
description = "Ontology-grounded pipeline for extracting, normalizing, and grounding requirements into IOF/QUDT graphs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "chromadb>=0.5.0",
    "matplotlib>=3.8.0",
    "networkx>=3.3",
    "ollama>=0.4.0",
    "openai>=1.0.0",
    "owlapy",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pyshacl>=0.25.0",
    "python-dotenv>=1.0.0",
    "pyvis>=0.3.2",
    "quantulum3>=0.9.2",
    "rdflib>=7.0.0",
    "spacy>=3.7.0",
]
authors = [{ name = "Ontology Req Pipeline Authors" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
ontology-req-pipeline = "ontology_req_pipeline.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ontology_req_pipeline" = [
    "normalization/*.csv",
    "normalization/*.json",
    "prompts/*.txt",
    "validation/shapes/*.ttl",
    "validation/shapes/*.md",
    "validation/shapes/*.shacl",
]
